<resources>
    <string name="app_name">GatherLink</string>
    <string name="profile_name">Profile Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="geolocation_tracking">Geolocation Tracking</string>
    <string name="scan_qr">Click To Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_profile_text">L O A D I N G</string>
    <string name="signed_up_text">Signed Up</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="remove_event">× Event</string>
    <string name="remove_poster">× Poster</string>
    <string name="remove_profile">× Profile</string>
    <string name="remove_picture">× Picture</string>
    <string name="glt_text">Geo-Location Tracking</string>
    <string name="start_text">Start</string>
    <string name="glt_description">The event organizer wants to get your current location information to complete the Check In. Depending on your privacy settings, you are willing to share your current location with the event organizer.</string>
    <string name="requesting_permission_text">Requesting Permission</string>
    <string name="downloading_location_text">Downloading Location</string>
    <string name="glt_fail_PNG">Permission not granted, please try again.</string>
    <string name="glt_fail_SNE">Location services are not enabled, please try again.</string>
    <string name="glt_fail_NLS">Your device does not have location services. Please turn off Geo-Location Tracking in the Profile settings and check in again!</string>
    <string name="invalid_name_text">Invalid Event</string>
    <string name="unavailable_text">Unavailable</string>
</resources>