<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <ImageButton
        android:id="@+id/btn_glt_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_arrow_icon"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_glt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/glt_text"
        android:textSize="34sp"
        android:layout_below="@+id/btn_glt_back_button"/>

    <TextView
        android:id="@+id/tv_glt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_glt_title"
        android:layout_marginTop="10dp"
        android:text="@string/glt_description"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <ImageView
        android:id="@+id/iv_glt_requesting_permission"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_glt_description"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/MainTheme2"
        android:src="@android:drawable/ic_menu_manage"
        app:tint="@color/MainTheme1" />

    <TextView
        android:id="@+id/tv_glt_requesting_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_glt_requesting_permission"
        android:layout_centerHorizontal="true"
        android:text="@string/requesting_permission_text"/>

    <ImageView
        android:id="@+id/iv_glt_requesting_permission_fail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_glt_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/MainTheme2"
        android:src="@android:drawable/ic_delete"/>

    <TextView
        android:id="@+id/tv_glt_requesting_permission_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_glt_requesting_permission_fail"
        android:layout_centerHorizontal="true"
        android:text=""/>

    <ImageView
        android:id="@+id/iv_glt_downloading_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_glt_description"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/MainTheme2"
        android:src="@android:drawable/ic_menu_mylocation"
        app:tint="@color/MainTheme1" />

    <TextView
        android:id="@+id/tv_glt_downloading_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_glt_downloading_location"
        android:layout_centerHorizontal="true"
        android:text="@string/downloading_location_text"/>

    <Button
        android:id="@+id/btn_glt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:text="@string/start_text" />
</RelativeLayout>